--- a/extension-files/popup.html
+++ b/extension-files/popup.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p onclick="getCurrentTab()">Sup bitch?!</p>
-    <!-- <button onclick="console.log('sup')">what</button> -->
+    <p>Test content</p>
 </body>
 </html>
