sending data to popup

--- a/extension-files/popup.html
+++ b/extension-files/popup.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Test content</p>
+    <p id="content">Test contents</p>
+    <script src="popup.js"></script>
 </body>
 </html>
