implementing block tracker toggle

--- a/extension-files/popup.html
+++ b/extension-files/popup.html
@@ -16,7 +16,7 @@
         <p>BLOCK TRACKERS FROM THIS SITE</p>
         <!-- <button id="stop-blocking">Yes</button> -->
         <label class="switch">
-            <input type="checkbox">
+            <input type="checkbox" id="site-tracker-switch">
             <span class="slider round"></span>
         </label>
     </div>
