showing tracker owners and ui improvements

--- a/extension-files/popup.html
+++ b/extension-files/popup.html
@@ -13,14 +13,14 @@
         <h3 id="header-title">Tracker Blocker</h3>
     </div>
     <div id="site-options">
-        <p>BLOCK TRACKERS FROM THIS SITE</p>
+        <h5>BLOCK TRACKERS FROM THIS SITE</h5>
         <!-- <button id="stop-blocking">Yes</button> -->
         <label class="switch">
             <input type="checkbox" id="site-tracker-switch">
             <span class="slider round"></span>
         </label>
     </div>
-    <hr>
+    <h3 id="tracker-list-title">Trackers Blocked</h3>
     <div id="blocked-sites"></div>
     <script src="popup.js"></script>
 </body>
